#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
CR-2009-09-22-0: Bugfix:     fixed framework error for tests that return 99
                             in setup procedure to skip the test
                 Review:     AA

TB-2009-09-21-0: Enhancem.:  Hedeby:
                             o Added test for PermanentRequestSLO with separate
                               setting of usage
                             o Added util/hedeby_get_version_num() to get the
                               numerical version of Hedeby (useful for skipping
                               tests)
                 Issue:      676
                 Review:     RH

JG-2009-09-18-1: Bugfix:     fixed upgrade_test/general
                 Review:     CR

JG-2009-09-18-0: Bugfix:     pe_ranges test failed due to wrong order in
                             cleanup (same issue as with IZ 2254 test)
                 Cleanup:    Fixed an ADOC warning, made qrsh test more fault
                             tolerant.
                 Review:     CR

MD-2009-09-18-0: Bugfix:     IZ 2254 failed, due a existing reference to a 
                             complex in a rqs -> cleanup func failed
                 Review:     JG

AP-2009-09-16-1: Bugfix:     fixing procedure get_test_count
                 Belongs to: AP-2009-09-16-0

AP-2009-09-16-0: Enhancem.:  o Adding auto installation test, basic test enhancement.
                             o Removing CHECK_CORE_SHADOWD global variable
                 Review:     LP

TB-2009-09-11-0: Bugfix:     Rolled back change to parse_table_output function
                 Belongs to: LP-2009-09-10-0